# Moviefy

./: .gitignore  .vercelignore  README.md  README_DIST.txt  START_MOVIEFY.bat  assets_list.txt  audit_700_profiles.mjs  audit_report.json  check_db.py  check_json.js  index.py  package-lock.json  package.json  package_app.py  pyproject.toml  reasonal.html  reasonal_utf8.html  recommender.py  requirements.txt  resume_parser.py  run_backend.py  setup_wizard.bat  test_500_profiles.mjs  test_500_results.txt  test_parser.js  vercel.json
.agent/workflows/: add_cinema_collection.md
api/: index.py  requirements.txt
backend/: .env.example  auto_updater.py  build.sh  bulk_importer.py  csv_importer.py  index.py  init_db.py  main.py  movies.db  parser.py  recommender.py  requirements.txt  resume_parser.py  test_ddgs.py  test_output.txt  test_pipeline.py  test_results.txt  test_resume.txt  test_resumes.py  tv_importer.py  update_2026.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/public/: ai.txt  llms.txt  manifest.json  robots.txt  sitemap.xml  sw.js
frontend/scripts/: generate-sitemap.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/data/: articles.js  movies.json  taxonomy.js
frontend/src/utils/: parser.js  promptBuilder.js  recommender.js
reasonal_template/: index.html  main.js
