[project]
name = "moviefy-api"
version = "0.1.0"
description = "MOVIEFY - Career-matched movie recommendations"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "pydantic",
    "scikit-learn",
    "python-multipart",
    "pandas",
    "numpy",
    "pdfplumber",
    "docx2txt",
]

[tool.vercel.scripts]
build = "cd frontend && npm install && npm run build && mkdir -p ../public && cp -r dist/* ../public/"
